--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,6 +146,10 @@ h1, h2, h4, h4{
         padding: 2.5rem;
     }
 
+    h1{
+        font-size: 2rem;
+    }
+
     p{
         line-height: 1.5rem;
     }
